# Adaptive_Mesh_Refinement-AMR_Tree

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: AMR_Tree.h  Adaptive_Mesh_Tree.h  Adaptive_Mesh_tree.h  Control.h  Node.h  Point.h  Static_Mesh_Tree.h
src/: AMR_Tree.cpp  Node.cpp  Point.cpp  Static_Mesh_Tree.cpp
